--- a/Public/index.html
+++ b/Public/index.html
@@ -9,13 +9,8 @@
 </head>
 <body>
 <div id="content"></div>
-<script type="text/babel">
-const element = (
-<div title="Outer div">
-<h1>Hello World!</h1>
-</div>
-);
-ReactDOM.render(element, document.getElementById('content'));
+<script type="text/babel" src="/App.jsx"></script>
+
 </script>
 </body>
 </html>
