--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -16,7 +16,7 @@
 <body>
 <div id="content"></div>
 <script src="/env.js"></script>
-<script src="/App.js"></script>
+<script src="/app.bundle.js"></script>
 
 
 </body>
